--- a/src/app/account/create-account/create-account.component.html
+++ b/src/app/account/create-account/create-account.component.html
@@ -13,16 +13,61 @@
         <h1>CREATE AN ACCOUNT</h1>
             <form class="card-content-account" [formGroup]="accountForm" (submit)="createAccount()">
                 <div class="form-inline">
-                    <input type="text" placeholder="First Name" formControlName="firstName">
-                    <input type="text" placeholder="Last Name" formControlName="lastName">
-                    
+                    <div class="margin">
+                        <input type="text" placeholder="First Name" formControlName="firstName">
+                        <div class="errors" *ngIf="accountFormControl('firstName').invalid">
+                            <div *ngIf="oneAccountFormControl('firstName', 'required')
+                            || oneAccountFormControl('firstName', 'minlength')">
+                                Field required (Minimum 2 characters)
+                            </div>
+                            <div *ngIf="oneAccountFormControl('firstName', 'pattern')">
+                                Only alphabetic characters.
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <input type="text" placeholder="Last Name" formControlName="lastName">
+                        <div class="errors" *ngIf="accountFormControl('lastName').invalid">
+                            <div *ngIf="oneAccountFormControl('lastName', 'required')
+                            || oneAccountFormControl('lastName', 'minlength')">
+                                Field required (Minimum 2 characters)
+                            </div>
+                            <div *ngIf="oneAccountFormControl('lastName', 'pattern')">
+                                Only alphabetic characters.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                        <input type="email" name="email" placeholder="Email" formControlName="email">
+                        <div class="errors" *ngIf="accountFormControl('email').invalid">
+                            <div *ngIf="oneAccountFormControl('email', 'required')">
+                                Field required
+                            </div>
+                            <div *ngIf="oneAccountFormControl('email', 'email')">
+                                Email format needed
+                            </div>
+                        </div>
                 </div>
                 <div class="form-inline">
-                    <input type="email" name="email" placeholder="Email" formControlName="email">
-                </div>
-                <div class="form-inline">
-                    <input type="text" placeholder="User" formControlName="user">
-                    <input type="password" placeholder="Password" formControlName="password">
+                    <div class="margin">
+                        <input type="text" placeholder="User" formControlName="user">
+                        <div class="errors" *ngIf="accountFormControl('user').invalid">
+                            <div *ngIf="oneAccountFormControl('user', 'required')
+                            || oneAccountFormControl('user', 'minlength')">
+                                Field required (Minimum 2 characters)
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <input type="password" placeholder="Password" formControlName="password">
+                        <div class="errors" *ngIf="accountFormControl('password').invalid">
+                            <div *ngIf="oneAccountFormControl('password', 'required')
+                            || oneAccountFormControl('password', 'minlength')">
+                                Field required (Minimum 8 characters)
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 
                 <button class="btn-black" type="submit">SIGN UP</button>
