--- a/src/app/main/cart/cart.component.scss
+++ b/src/app/main/cart/cart.component.scss
@@ -60,23 +60,22 @@
   flex-flow: column;
   text-align: left;
   justify-content: center;
+}
 
-  input {
-      font-family: 'Montserrat';
-      font-size: medium;
-      height: 30px;
-      width: 100%;
-      margin: 8px 5px;
-      border: 0;
-      border-bottom: 2px solid red;
-      outline: none;
-  }
+input {
+  width: 95%;
+  margin: 8px 0px;
 }
 
 .form-inline {
   width: 100%;
-  justify-content: space-between;
-  align-items: center;
+  div {
+    width: 100%;
+  }
+}
+
+.margin input {
+  margin-right: 20px;
 }
 
 .btn-buy {
