Envia email al comprar, pedir login en carrito, buy removido en detalle

--- a/src/app/main/detail/detail.component.html
+++ b/src/app/main/detail/detail.component.html
@@ -56,22 +56,24 @@
       </div>
       </div>
 
-      <button class="btn-black" (click)="addToCart()">
-        <span class="material-icons" >
-          shopping_cart
-        </span>
-      </button>
-      <button class="btn-buy" (click)="buy()">
-        Buy now
-      </button>
+      <ng-container *ngIf="isLogged; else redirect">
+        <button style="width:90%;" class="btn-black" (click)="addToCart()">
+          <span class="material-icons" >
+            shopping_cart
+          </span>
+        </button>
+      </ng-container>
+      <ng-template #redirect>
+        <button class="btn-black" routerLink="/login" >
+          <span class="material-icons" >
+            shopping_cart
+          </span>
+        </button>
+      </ng-template>
     </div>
   </div>
 </div>
 
 <div class="card modal" [ngClass]="showModal? 'modal-show':''">
   <p>Producto agregado al carrito</p>
-</div>
-
-<div class="card modal" [ngClass]="showModalBuy? 'modal-show':''">
-  <p>Thanks for your purchase</p>
 </div>
