--- a/src/styles.scss
+++ b/src/styles.scss
@@ -179,6 +179,31 @@ input, select {
   text-align: justify;
 }
 
+.loading-red {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  font-size: x-large;
+  font-weight: 700;
+  background-color: rgba(255, 0, 0, 0.8);
+  color: white;
+  width: 100%;
+  min-height: 100px;
+}
+.loading-yellow {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  font-size: x-large;
+  font-weight: 700;
+  background-color: rgba(255, 255, 92, 0.8);
+  color: black;
+  width: 100%;
+  min-height: 100px;
+}
+
 /*************************************************************************************************/
 /*start CARD FLIP*/
 .card-comic {
