--- a/src/app/main/funko-card/funko-card.component.html
+++ b/src/app/main/funko-card/funko-card.component.html
@@ -1,5 +1,5 @@
 <a routerLink="detail/{{ funko.id }}">
-<div class="card card-comic" style="min-height: 300px;">
+<div class="card card-funko" style="min-height: 265px;">
     <div>
       <img class="image-rounded" src="{{ funko.image }}" alt="{{ funko.name }}" />
     </div>
