--- a/src/app/main/card/card.component.html
+++ b/src/app/main/card/card.component.html
@@ -4,7 +4,7 @@
       <img class="image-rounded" src="{{ comic.thumbnail.path }}.{{ comic.thumbnail.extension }}"
         alt="{{ comic.title }}" />
     </div>
-    <div>
+    <div class="text-center">
       <h4 class="title">
         {{ comic.title }}
       </h4>
