--- a/src/app/main/card/card.component.scss
+++ b/src/app/main/card/card.component.scss
@@ -1,11 +1,16 @@
-.title {
-  padding-top: 20px;
-  text-align: center;
-  justify-content: center;
-  height: 60px;
-}
-
 a {
   text-decoration: none;
   color: black;
+}
+
+.card-comic:hover {
+  transform: scale(1.06);
+  box-shadow: 5px 5px 5px 5px rgb(0, 0, 0);
+}
+
+.card-comic {
+  transition: all .2s ease-in-out;
+}
+.text-center {
+  text-align: center;
 }
