--- a/src/app/main/funko-card/funko-card.component.scss
+++ b/src/app/main/funko-card/funko-card.component.scss
@@ -2,3 +2,13 @@ a {
   text-decoration: none;
   color: black;
 }
+.card-funko:hover {
+  transform: scale(1.06);
+  box-shadow: 5px 5px 5px 5px rgb(0, 0, 0);
+}
+.card-funko {
+  transition: all .2s ease-in-out;
+}
+.text-center {
+  text-align: center;
+}
