--- a/src/app/main/detail/detail.component.html
+++ b/src/app/main/detail/detail.component.html
@@ -75,5 +75,5 @@
 </div>
 
 <div class="card modal" [ngClass]="showModal? 'modal-show':''">
-  <p>The product has been added to your cart.</p>
+  <p>Product added to your cart</p>
 </div>
