--- a/src/app/main/comics/comics.component.html
+++ b/src/app/main/comics/comics.component.html
@@ -36,7 +36,8 @@
 </div>
 <br /><br />
 <div class="loading-yellow" *ngIf="load">
-  LOADING . . .
+  <img class="loading" (load)="animate=true" [ngClass]="animate?'animate':''" src="../../../assets/img/loading.png" alt="loading">
+  <span>Loading...</span>
 </div>
 <ng-container *ngIf="!load">
   <div class="comics-list" *ngIf="comics.length && !load">
