--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <div class="main-container">
     <router-outlet></router-outlet>
+  <!-- No touch  -->
+  <img hidden src="../../../assets/img/loading.png" alt="loading">
+  <!-- No touch  -->
 </div>
